--- a/Ocleaner/package.json
+++ b/Ocleaner/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "react": "16.3.1",
     "react-native": "0.55.3",
-    "react-native-minimalism-calendar": "^1.0.1"
+    "react-native-ocalendar": "^1.0.0"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
